fixed margin gap

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
 
-
+*{
+  padding: 0px;
+  margin: 0px;
+}
 .Navbar {
   background-color: black;
   color: white;
   font-family: monospace;
   position: fixed;
-  margin-top: 0px;
+ 
+  padding: 0px;
   z-index: 999;
   width: 100vw;
   height: auto;
@@ -114,7 +118,14 @@
 .Background {
   height: 100vh;
   width: 100vw;
+  padding: 0px;
+  margin: 0px;
   position: fixed;
   background-image: linear-gradient(#300030, #000000);
   z-index: -1;
+}
+
+.all {
+  padding: 0px;
+  margin: 0px;
 }
